[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Audio/Background_Music/nature_comes_sharp.ogg" type="AudioStream" id=1]
[ext_resource path="res://src/Auto_Loader/Audio_System.gd" type="Script" id=2]
[ext_resource path="res://assets/Audio/SFX/hurt.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/Audio/SFX/kiss.wav" type="AudioStream" id=4]

[node name="Audio_System" type="Node"]
script = ExtResource( 2 )

[node name="Background_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -10.0

[node name="hurt_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -6.0
pitch_scale = 1.8

[node name="kiss_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0
