extends Node

onready var Background_music: AudioStreamPlayer = get_node("Background_music")
onready var hurt_sfx: AudioStreamPlayer = get_node("hurt_sfx")
onready var kiss_sfx: AudioStreamPlayer = get_node("kiss_sfx")
onready var laundry_pickup_sfx: AudioStreamPlayer = get_node("laundry_pickup_sfx")
onready var deliver_laundry_sfx: AudioStreamPlayer = get_node("deliver_laundry_sfx")
onready var open_door_sfx: AudioStreamPlayer = get_node("open_door_sfx")
onready var close_door_sfx: AudioStreamPlayer = get_node("close_door_sfx")
